# CursorTuberKit

./: .character-director-output.json  .env.example  .gitignore  .gitmodules  .tmp_heavy_mutation.json  AGENTS.MD  AGENTS.md  LICENSE  README.ja.md  README.md  analyze_abort.md  character_mei_ai.md  cursor-sdk-usage-ja.md  deno.json  devbox.json  edge_case_analysis.md  index.html  package-lock.json  package.json  tsconfig.node.json  verify_abort_cleanup.md  vite.config.ts  vitest.config.ts
.cursor/: hooks.json  last-response.json  temp_drift_output.json  tmp-response.json
config/: defaults.json  load-config.d.ts  load-config.mjs  load-config.mjs.d.ts  local.example.json
scripts/: cursor-stop-hook.mjs  cursor-stop-hook.sh  deno-start.mjs  ensure-supported-install.mjs  ensure-supported-install.sh  memkraft.ts  runtime-entry.sh  tasks.mjs  voicevox.mjs
server/: Containerfile.memkraft  aiCommon.ts  aiProvider.ts  appConfig.ts  appSettings.ts  automationSafety.ts  autopilotPlanner.ts  characterAgents.ts  characterArtifacts.ts  characterPresets.ts  characterRuleSource.test.ts  characterRuleSource.ts  characterRuntimeState.ts  characterState.ts  chatSession.ts  chatSettings.ts  cursorAgent.ts  cursorAgentUtils.test.ts  cursorAgentUtils.ts  cursorLocalOptions.ts  cursorSdkRun.ts  cursorSessionStore.ts  cursorTelemetry.ts  cursorTypes.ts  cursorWorker.ts  dopamineDirector.ts  geminiAgent.ts  heavySelfRewrite.ts  index.ts  liveSelfRewrite.ts  memkraft.ts  memkraftContainer.ts  memkraft_bridge.py  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
(+118 files in other folders)
